# choresir

./: .copier-answers.yml  .dockerignore  .env  .env.example  .gitignore  .gitlab-ci.yml  .markdownlint.json  .pre-commit-config.yaml  .sesskey  .textlintrc.json  AGENTS.md  AUDIT_CODE_CHANGES.md  AUDIT_DOCUMENTATION_CHANGES.md  AUDIT_PM_DECISIONS.md  AUDIT_SUMMARY.md  CHANGELOG.md  CHANGELOG_CHORESIR.md  Dockerfile  Dockerfile.pocketbase  Dockerfile.test  PR-64-issues.md  PR_72_FIX_GUIDE.md  README.md  Taskfile.yml  alembic.ini  choresir.db  compose.test.yml  design-decision-7.md  docker-compose.yml  magical-swinging-parasol.md  mkdocs.yml  package.json  pyproject.toml  railway.pocketbase.toml  railway.toml  review_3740736569_suggestions.md  run-tests.sh
.agents/tasks/: prd-code-cleanup.json  prd-code-review-fixes.json  prd-documentation-overhaul.json  prd-pr64-fixes.json  prd-pr64-review-fixes.json  prd-sqlite-migration.json
.github/workflows/: ci.yml  version-bump.yml
.hypothesis/constants/: 036e6e7e1542de6b  16754b88a1a38d9d  3381898e3ceb51e8  3517b4ebf2afd55f  3738ef36e1c34ec0  3ac971adce89d8e9  3c05570df2d94b77  4076bac28545bff1  4bd872f0863e6cbe  5b71463840e0126a  5cdc09514311699f  5fa41197c59d2d8b  65aaae95f522c4d4  7745d8c256dca5ba  84e077507d16321c  870a8e18ea2a660b  983814e872bdc305  a0d3800ce371de20  ae2271759d808a4b  b252a42299607b23  c71b62dbd0908b34  da39a3ee5e6b4b0d  db3974841dd02e63  dd3225b767211541  de2164b7af3170a5  e07e02c71dcb73cb  e8e0dae5887dcee3  fe4f12024cd1c8fc
.jules/: sentinel.md
.ralph/: progress.md
.ralph/.tmp/: prd-prompt-20260201-173350-51705.md  prd-prompt-20260201-222256-8080.md  prd-prompt-20260202-120218-53002.md  prd-prompt-20260202-120300-53640.md  prd-prompt-20260202-173228-87968.md  prd-prompt-20260203-093452-66977.md  prd-prompt-20260208-234015-96626.md  prompt-20260201-211312-25911-1.md  prompt-20260201-211312-25911-10.md  prompt-20260201-211312-25911-11.md  prompt-20260201-211312-25911-2.md  prompt-20260201-211312-25911-3.md  prompt-20260201-211312-25911-4.md  prompt-20260201-211312-25911-5.md  prompt-20260201-211312-25911-6.md  prompt-20260201-211312-25911-7.md  prompt-20260201-211312-25911-8.md  prompt-20260201-211312-25911-9.md  prompt-20260201-222805-14587-1.md  prompt-20260201-222805-14587-2.md  prompt-20260201-222805-14587-3.md  prompt-20260201-222805-14587-4.md  prompt-20260201-222805-14587-5.md  prompt-20260201-222805-14587-6.md  prompt-20260201-222805-14587-7.md  prompt-20260201-222805-14587-8.md  prompt-20260202-091609-90961-1.md  prompt-20260202-091609-90961-2.md  prompt-20260202-091609-90961-3.md  prompt-20260202-091609-90961-4.md  prompt-20260202-091609-90961-5.md  prompt-20260202-091609-90961-6.md  prompt-20260202-091609-90961-7.md  prompt-20260202-091609-90961-8.md  prompt-20260202-121410-64187-1.md  prompt-20260202-121410-64187-10.md  prompt-20260202-121410-64187-11.md  prompt-20260202-121410-64187-12.md  prompt-20260202-121410-64187-13.md  prompt-20260202-121410-64187-14.md  (+288 more)
.ralph/runs/: run-20260201-211312-25911-iter-1.md  run-20260201-211312-25911-iter-10.md  run-20260201-211312-25911-iter-11.md  run-20260201-211312-25911-iter-2.md  run-20260201-211312-25911-iter-3.md  run-20260201-211312-25911-iter-4.md  run-20260201-211312-25911-iter-5.md  run-20260201-211312-25911-iter-6.md  run-20260201-211312-25911-iter-7.md  run-20260201-211312-25911-iter-8.md  run-20260201-211312-25911-iter-9.md  run-20260201-222805-14587-iter-1.md  run-20260201-222805-14587-iter-2.md  run-20260201-222805-14587-iter-3.md  run-20260201-222805-14587-iter-4.md  run-20260201-222805-14587-iter-5.md  run-20260201-222805-14587-iter-6.md  run-20260201-222805-14587-iter-7.md  run-20260201-222805-14587-iter-8.md  run-20260202-091609-90961-iter-1.md  run-20260202-091609-90961-iter-2.md  run-20260202-091609-90961-iter-3.md  run-20260202-091609-90961-iter-4.md  run-20260202-091609-90961-iter-5.md  run-20260202-091609-90961-iter-6.md  run-20260202-091609-90961-iter-7.md  run-20260202-091609-90961-iter-8.md  run-20260202-121410-64187-iter-1.md  run-20260202-121410-64187-iter-10.md  run-20260202-121410-64187-iter-11.md  run-20260202-121410-64187-iter-12.md  run-20260202-121410-64187-iter-13.md  run-20260202-121410-64187-iter-14.md  run-20260202-121410-64187-iter-15.md  run-20260202-121410-64187-iter-16.md  run-20260202-121410-64187-iter-17.md  run-20260202-121410-64187-iter-18.md  run-20260202-121410-64187-iter-19.md  run-20260202-121410-64187-iter-2.md  run-20260202-121410-64187-iter-20.md  (+69 more)
adrs/: 001-stack.md  002-agents.md  003-verification.md  004-conflict.md  006-standards.md  007-operations.md  008-gamification.md  008-interactive-verification.md  009-smart-pantry.md  AGENTS.md  README.md
alembic/: env.py
alembic/versions/: 001_initial.py
docs/: DEPLOYMENT.md  DESIGN.md  ERROR_HANDLING.md  LOCAL_DEVELOPMENT.md  LOGFIRE_SETUP.md  MODULARIZATION_PLAN.md  NGROK_SETUP.md  PATTERNS.md  PERSONAL_CHORES.md  POCKETBASE_SETUP.md  QUICK_START.md  RAILWAY_DEPLOYMENT.md  ROADMAP.md  SETUP.md  SPEC.md  TWILIO_MIGRATION.md  WHATSAPP_TEMPLATES.md  agents.md  architecture.md  change_promise.toml  index.md
docs/adr/: 001-stack.md  002-agent-framework.md  004-conflict.md  (+16 more)
issues/: 001-gamified-leaderboards.md  001-smart-pantry.md  002-house-fund-ledger.md  002-smart-nudge-protocol.md  003-gamified-seasons.md  003-interactive-verification.md  004-visual-proof.md  005-personal-chore-tracking.md  006-code-improvements.md  006-conversational-house-joining.md
pb_data.backup_20260121_004922/: auxiliary.db  data.db
pb_migrations/: 1768590449_created_chores.js  1768590449_created_logs.js  1768590449_created_processed_messages.js  1768590449_updated_users.js
scripts/: approve_user.py  benchmark_verification.py  check_collection.py  check_collection_http.py  inspect_collection.py  migrate_v1_to_v2.py  setup-ngrok-domain.sh  setup_pocketbase.sh  start_ngrok.sh  sync_schema_manual.py  test_create_record.py  test_pocketbase_sdk.py
site/: 404.html  index.html
src/: main.py
templates/: landing.html
tests/: conftest.py  test_placeholder.py  test_workflows.py
(+332 files in other folders)
